# uasm

./: .gitignore  CMakeLists.txt  README.md  uasm.sln  workspace.code-workspace
UnitTests/: UnitTests.cpp  UnitTests.vcxproj
examples/machines/: 6502.mach  chip8.mach  defines_test.mach  dynamocpu.mach  dynamocpu32.mach  minicore.mach  shd-1.mach  simple.mach
examples/source/: chip8.s  dynamocpu.s  minicore.s  shd-1-test.s
examples/source/dynamocpu-examples/: datatest.s  fibonacci-into-data.s  fibonacci.s  functiontest.s  jreg-test-1.s  jreg-test-2.s  primes.s  swap.s
inc/: args.h  helper.h  log.h
src/: args.cpp  assembler.cpp  helper.cpp  log.cpp  machine.cpp  main.cpp
uasm/: README.md  args.cpp  args.h  assembler.cpp  assembler.h  chip8.mach  chip8.s  helper.cpp  helper.h  log.h  machine.cpp  machine.h  main.cpp  minicore.mach  simple.mach  simple.s  uasm.vcxproj  uasm.vcxproj.filters
uasm-machine-file-maker/: uasm-machine-file-maker.vcxproj  uasm-machine-file-maker.vcxproj.filters
uasm/examples/machines/: 6502.mach  chip8.mach  minicore.mach
uasm/examples/source/: defines_test.s  simple.s
